--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky && prisma generate"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
@@ -16,6 +17,8 @@
     "@radix-ui/react-slot": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "husky": "^9.1.1",
+    "lint-staged": "^15.2.7",
     "lucide-react": "^0.562.0",
     "next": "14.2.35",
     "react": "^18",
