--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "lint-staged": "^15.2.7",
     "lucide-react": "^0.562.0",
     "next": "14.2.35",
+    "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
