--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.11.1",
     "@prisma/client": "^5.17.0",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -24,6 +25,7 @@
     "lint-staged": "^15.2.7",
     "lucide-react": "^0.562.0",
     "next": "14.2.35",
+    "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
